--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-feather": "^1.1.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
