--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/client": "^6.15.20",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
