--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/client": "^6.15.20",
     "@sanity/image-url": "^1.0.2",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-feather": "^1.1.2",
-    "react-native-maps": "1.10.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-redux": "^9.1.1"
   },
   "devDependencies": {
