--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/client": "^6.15.20",
     "@sanity/image-url": "^1.0.2",
-    "expo": "^51.0.2",
+    "expo": "~51.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
