--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/client": "^6.15.20",
     "@sanity/image-url": "^1.0.2",
-    "expo": "~51.0.7",
+    "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5",
     "react-native-feather": "^1.1.2",
     "react-native-maps": "1.14.0",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-redux": "^9.1.1"
+    "react-native-svg": "^15.2.0",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.1",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
