--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/client": "^6.15.20",
     "@sanity/image-url": "^1.0.2",
-    "expo": "~51.0.39",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.0",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
-    "react": "^18.2.0",
-    "react-native": "^0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-feather": "^1.1.2",
-    "react-native-maps": "1.14.0",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-maps": "1.18.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.1",
     "reselect": "^5.1.1"
@@ -33,5 +34,21 @@
     "@babel/core": "^7.20.0",
     "tailwindcss": "^3.3.2"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-maps",
+          "@expo/metro-runtime",
+          "@reduxjs/toolkit",
+          "@sanity/client",
+          "@sanity/image-url",
+          "react-native-feather",
+          "react-redux",
+          "reselect"
+        ]
+      }
+    }
+  }
 }
