--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "^0.19.7",
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/client": "^6.15.20",
     "@sanity/image-url": "^1.0.2",
-    "expo": "^52.0.0",
+    "eas-cli": "^13.4.2",
+    "expo": "~52.0.18",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-feather": "^1.1.2",
     "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
@@ -47,7 +51,8 @@
           "react-native-feather",
           "react-redux",
           "reselect"
-        ]
+        ],
+        "listUnknownPackages": false
       }
     }
   }
